# ShatteredVault

./: CMakeLists.txt  README.md
include/: camera.hh  sprite.hh  windowrenderer.hh
src/: camera.cc  main.cc  sprite.cc  windowrenderer.cc
tests/: drawcalltest.cc
utils/: clock.hh  drawcall.h  size.h
